# boatv

./: .dockerignore  .gitignore  .gitmodules  AWS user data start script.bash  Dockerfile  Dockerfile.dockwater_humble  LICENSE  README.md  cyclonedds.xml  docker-compose.yml  test.html
.devcontainer/: devcontainer.json
AWS/: AmazonAWS.pem
documents/: network.md
scripts/: autobackground.bash  build.bash  clean.bash  deploy.bash  join_dev.bash  kill_all.bash  make.bash  run_all.bash  run_dev.bash  run_system.bash  setup.bash
src/boatv_devices/: package.xml  setup.cfg  setup.py
src/boatv_devices/config/: ellipse_D.yaml
src/boatv_devices/launch/: ellipseD_launch.py
src/vera/: CMakeLists.txt  package.xml
src/vera_core/: package.xml  setup.cfg  setup.py
src/vera_core/config/: zenoh.config.json5  zenoh_pub.config.json5
src/vera_core/launch/: publisher.launch.py  sbg.launch.py  simple_boat.launch.py  zenoh.launch.py
src/vera_description/: package.xml  setup.cfg  setup.py
src/vera_description/urdf/: bullshark.urdf
src/vera_hw/: package.xml  setup.cfg  setup.py
src/vera_hw/config/: sbg_device_uart_default.yaml
src/vera_hw/launch/: ellipse_D.launch.py  sbg.launch.py  simple_boat.launch.py
src/vera_hw/vera_hw/: sbg_publisher.py
src/vera_sim/: package.xml  setup.cfg  setup.py
src/vera_sim/launch/: sbg.launch.py  simple_boat.launch.py
src/vera_sim/vera_sim/: simple_boat_sim.py
src/vera_tools/: package.xml  setup.cfg  setup.py
src/vera_tools/launch/: rosbridge_websocket.launch.py
src/vera_tools/vera_tools/: sbg_tf_publisher.py  tf_publisher.py
src/vera_ui/: package.xml  setup.cfg  setup.py
src/vera_ui/config/: sbg.perspective  sbg.rviz  simple_boat.perspective  simple_boat.rviz  zenoh.config.json5  zenoh_sub.config.json5
src/vera_ui/launch/: sbg.launch.py  simple_boat.launch.py  subscriber.launch.py  zenoh.launch.py
