<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vera_tools</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="grodnay@riil.tech">verauser</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sbg_driver</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
