<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vera_ui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="grodnay@riil.tech">verauser</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>rviz2</depend>
  <depend>rqt_common_plugins</depend>
  <depend>rqt_tf_tree</depend>
  <depend>geographic_msgs</depend>
  <depend>rosbridge_suite</depend>
  <depend>rosbridge_server</depend>
  <depend>web_video_server</depend>
  <depend>foxglove_bridge</depend>
  <depend>foxglove_compressed_video_transport</depend>
  <depend>foxglove_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>


  <!-- <depend>zenoh_bridge_dds</depend> --> <!-- We are using a stand alone verion -->


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
